--- a/new_pract9/Dockerfile
+++ b/new_pract9/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17
-COPY new_pract9-0.0.1.jar new_pract9-0.0.1.jar
-CMD ["java","-jar","new_pract9-0.0.1.jar"]
+COPY new_pract9-0.0.1-plain.jar new_pract9-0.0.1-plain.jar
+CMD ["java","-jar","new_pract9-0.0.1-plain.jar"]
